--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <!--Icons-->
     <link rel="stylesheet" href="assets/fonts/style.css" />
 
-    <!--Swiper-->
+    <!--Swiper
     <link
       rel="stylesheet"
-      href="href"
-      ="https://unpkg.com/swiper/swiper-bundle.min.css"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
     />
+    -->
     <!--Styles-->
     <link rel="stylesheet" href="style.css" />
 
@@ -166,7 +166,10 @@
                   <p>
                     <span>&ldquo;</span>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Voluptas animi quidem est accusamus nulla ipsum
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Illo, non! Earum, sit excepturi architecto, aut qui
+                    dignissimos consectetur fugiat hic aliquam dolores nam
+                    aspernatur amet error et tempore officia numquam?
                   </p>
                   <cite>
                     <img
@@ -177,12 +180,15 @@
                   </cite>
                 </blockquote>
               </div>
+
               <div class="testimonial swiper-slide">
                 <blockquote>
                   <p>
                     <span>&ldquo;</span>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Voluptas animi quidem est accusamus nulla ipsum
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Eum debitis eligendi veritatis officia hic. Reiciendis est
+                    qui quam voluptates odio debitis accusantium vitae, enim
+                    aperiam possimus autem beatae, minus voluptatibus.
                   </p>
                   <cite>
                     <img
@@ -193,6 +199,7 @@
                   </cite>
                 </blockquote>
               </div>
+
               <div class="testimonial swiper-slide">
                 <blockquote>
                   <p>
@@ -211,7 +218,6 @@
               </div>
             </div>
 
-            <!-- If we need pagination -->
             <div class="swiper-pagination"></div>
           </div>
         </div>
@@ -247,8 +253,9 @@
       </section>
     </main>
 
-    <!-- swiper -->
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <!-- swiper
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
+
     <!-- scrollreveal -->
     <script src="https://unpkg.com/scrollreveal"></script>
     <!--main.js-->
