--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <div class="divider-2"></div>
 
       <!--SERVICES-->
-      <section class="section" id="Services">
+      <section class="section" id="services">
         <div class="container grid">
           <header>
             <h2 class="title">Ensaios</h2>
@@ -218,7 +218,7 @@
               </div>
             </div>
 
-            <div class="swiper-pagination"></div>
+            <!--<div class="swiper-pagination"></div>-->
           </div>
         </div>
       </section>
@@ -251,7 +251,32 @@
           </div>
         </div>
       </section>
+
+      <div class="divider-1"></div>
     </main>
+    <!--Rodape-->
+    <footer class="section">
+      <div class="container grid">
+        <div class="brand">
+          <a class="logo logo-alt" href="#">Joh<span>Photo</span>.</a>
+          <p>©2021 JohPhoto.</p>
+          <p>Todos os direitos reservados.</p>
+        </div>
+
+        <div class="social">
+          <a href="https://instagram.com" target="_blank">
+            <i class="icon-instagram"></i>
+          </a>
+          <a href="htpps://facebook.com" target="_blank">
+            <i class="icon-facebook"></i>
+          </a>
+          <a href="htpps://youtube.com" target="_blank">
+            <i class="icon-youtube"></i>
+          </a>
+        </div>
+      </div>
+    </footer>
+    <a href="#home" class="back-to-top"><i class="icon-chevron-up"></i></a>
 
     <!-- swiper
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
